- Added RFC2898 providing PKCS #5, Version 2.0
- Added RFC9215 providing GOST R 34.10-2012 and GOST R 34.11-2012 Algorithms
- Added RFC5698 providing Data Structure for the Security Suitability of
  Cryptographic Algorithms (DSSC)
- Added RFC9286 providing RPKI Manifests, which obsoletes RFC6484
- Improve tests for RFC2985, RFC370, RFC3657, RFC4010, RFC4055, RFC6494,
  RFC7914, and RFC8692

Revision 0.4.1, released 16-02-2022
-----------------------------------
- Update RFC4210 to import from RFC 5280, RFC 4211, and RFC6402 instead of
  earlier RFCs covering the same things
- Update RFC4211 to import from RFC 5280 and RFC5252 instead of earlier
  RFCs covering the same things, and to include an opentype map for
  AttributeTypeAndValue
- Add RFC9118 providing Enhanced JWT Claim Constraints certificate extension
- Add RFC2743 providing GSSAPI Tokens
- Add addon providing a place for features that are not supported by pyasn1;
  addon.RelativeOID is the first add-on feature
- Add RFC5794 providing the ARIA Encryption Algorithm
- Add RFC9174 providing naming and extended key usage for the Delay-Tolerant
  Networking TCP Convergence Layer Version 4
- Improve the test for RFC6486
- Improve the test for RFC9174
- Update the copyright lines for 2022
- Improve RFC3709 to enforce WITH COMPONENTS constraints
- Add RFC9189 providing GOST Cipher Suites for TLS 1.2
- Improve RFC5280 by adding defined policy qualifiers to map (CBonnell)

Revision 0.4.0, released 10-07-2021
-----------------------------------
- Added opentypemap to manage the open type maps for all modules
- Add RFC9092 providing CMS Content Type for Geofeed Data

Revision 0.3.2, released 14-06-2021
-----------------------------------
- Modified RFC5280 to use CRLNumber() in the extensions opentype map.

Revision 0.3.1, released 13-06-2021
-----------------------------------
- Add RFC4056 providing RSASSA-PSS Signature Algorithm in CMS
- Add RFC4059 providing Warranty Certificate Extension